--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-nibabel==3.2.1
-numpy==1.20.1
-pandas==1.2.4
-matplotlib==3.3.4
-scipy==1.6.2
-scikit_image==0.18.1
+matplotlib==3.5.1
+nibabel==3.2.2
+numpy==2.3.2
+pandas==1.4.2
+Pillow==11.3.0
+scipy==1.16.1
 skimage==0.0
