--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-matplotlib==3.5.1
-nibabel==5.3.2
-numpy==2.3.4
-pandas==2.3.3
-Pillow==12.0.0
-scipy==1.16.3
-skimage==0.0
+matplotlib>=3.7.0
+nibabel>=5.0.0
+numpy>=1.24.0
+numpy-matlib
+pandas>=2.0.0
+scipy>=1.10.0
+scikit-image>=0.21.0
+Pillow>=9.0.0
